--- a/JimManagement/WebContent/index.html
+++ b/JimManagement/WebContent/index.html
@@ -251,9 +251,7 @@
                <div class="col-md-4">
                    <h4> <strong>OUR LOCATION</strong> </h4>
                             <p>
-                               234/JK , The Wondre Land, <br />
-                               Newyork Street Junction  <br />
-                               JUST USA -10909094
+                               Palawa,New Mumbai
                             </p>
                     <a href="#" class="btn btn-primary" >SEND QUERY</a>
                 </div>
