--- a/JimManagement/WebContent/services.html
+++ b/JimManagement/WebContent/services.html
@@ -8,7 +8,7 @@
     <!--[if IE]>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <![endif]-->
-    <title>Free Multipurpose Template : RUMA</title>
+    <title>Very nice and affordable price</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLE CSS -->
